# urc-control-systems-2024

./: README.md
.github/workflows/: build_apps.yml
arm-mimic/: main.cpp
arm-mimic/applications/: application.cpp  feedback_servo_demo.cpp
bellerophon/: CMakeLists.txt
bellerophon/src/: can.h  main.cpp
bldc/: CMakeLists.txt  conanfile.py
bldc/src/: can.c  hbridge.hpp  main.cpp
drive/: CMakeUserPresets.json  compile_commands.json
drivers/: CMakeLists.txt  conanfile.py  hardware_map.hpp  resource_list.hpp
drivers/applications/: can_demo.cpp  triple_channel_pwm_demo.cpp
perseus/: CMakeLists.txt  hardware_map.hpp  resource_list.hpp
perseus/applications/: application.cpp  can_test.cpp  can_test_copy.cpp  can_test_elbow.cpp  can_test_endeff.cpp  can_test_shoulder.cpp  can_test_track.cpp  can_test_wrist.cpp  can_test_wrist_l.cpp  can_test_wrist_r.cpp  elbow_fig8.cpp  encoder_values.cpp  homing_test.cpp  perseus_can_demo.cpp  shoulder_can_test.cpp  shoulder_fig8.cpp  track_fig8.cpp  track_move.cpp  wristTest.cpp
perseus/include/: bldc_servo.hpp  can_messaging.hpp
perseus/src/: bldc_servo.cpp  can_messaging.cpp
pico/: CMakeLists.txt  conanfile.py  out.html
pico/applications/: application.cpp
pico/include/: base64.hpp  hbridge.hpp
pico/src/: simple_main.cpp
